my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ETYPE/ETYPE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:16:1: error ETYPE: unknown type: 'undefined_type_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:18:31: error ETYPE: unknown type: 'undefined_type_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:20:1: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:10:8: error ETYPE: unknown type: 'undefined_type_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:12:23: error ETYPE: unknown type: 'undefined_type_t'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:14:8: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:27:9: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:29:13: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:43:9: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:45:13: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:34:9: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:36:13: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:55:9: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:57:13: error ETYPE: unknown type: 'undefined_type'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ETYPE.dml:36:13: error ETYPE: unknown type: 'undefined_type'
